objects/Network_Site__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Previous Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>**OPEN**</fullName>
                </value>
                <value>
                    <fullName>BAD BACKUP- New Tape Requested</fullName>
                </value>
                <value>
                    <fullName>Cataloging</fullName>
                </value>
                <value>
                    <fullName>COMPLETED- DB Restore</fullName>
                </value>
                <value>
                    <fullName>Indexing</fullName>
                </value>
                <value>
                    <fullName>LOADING</fullName>
                </value>
                <value>
                    <fullName>RESERVED</fullName>
                </value>
                <value>
                    <fullName>Restoring</fullName>
                </value>
                <value>
                    <fullName>New DB Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Used_Allocated__c</fullName>
        <label>Storage Used/Allocated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Code__c</fullName>
        <label>System Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEST_11g_SCAN_IP_Address__c</fullName>
        <description>Test 11g SCAN IP Addresses</description>
        <label>TEST 11g SCAN IP Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEST_11g_SCAN_Name__c</fullName>
        <description>Test 11g Deployment information</description>
        <label>TEST 11g SCAN Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEST_App1_Server_IP_Address__c</fullName>
        <label>TEST App1 Server IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_App1_Server__c</fullName>
        <label>TEST App1 Server</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_App2_Server_IP_Address__c</fullName>
        <label>TEST App2 Server IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_App2_Server__c</fullName>
        <label>TEST App2 Server</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_DB_2_IP_Address__c</fullName>
        <label>TEST DB 2 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_DB_IP_Address__c</fullName>
        <label>TEST DB IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_DB_Server_1__c</fullName>
        <label>TEST DB Server 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_DB_Server_2__c</fullName>
        <label>TEST DB Server 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_EDS_IP_Address__c</fullName>
        <label>TEST EDS IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_EDS_Server__c</fullName>
        <label>TEST EDS Server</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_EDS_server_2_IP__c</fullName>
        <label>TEST EDS 2 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_EDS_server_2__c</fullName>
        <label>TEST EDS server 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_Rpt_1_IP_Address__c</fullName>
        <label>TEST Rpt 1 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_Rpt_2_IP_Address__c</fullName>
        <label>TEST Rpt 2 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_Rpt_3_IP_Address__c</fullName>
        <label>TEST Rpt 3 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_Rpt_Server_1__c</fullName>
        <label>TEST Rpt Server 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_Rpt_Server_2__c</fullName>
        <label>TEST Rpt Server 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_Rpt_Server_3__c</fullName>
        <label>TEST Rpt Server 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_Sch_Merge_Server_IP_Address__c</fullName>
        <label>TEST Sch Merge Server IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_Sch_Merge_Server__c</fullName>
        <label>TEST Sch Merge Server</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_TNSNAME__c</fullName>
        <label>TEST TNSNAME</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEST_Web_1_IP_Address__c</fullName>
        <label>TEST Web 1 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_Web_2_IP_Address__c</fullName>
        <label>TEST Web 2 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_Web_Server_1__c</fullName>
        <label>TEST Web Server 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_Web_Server_2_Ap_Server__c</fullName>
        <label>TEST Web Server 2 (Ap Server)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_eRevision_Server_IP_Address__c</fullName>
        <label>TEST eRevision Server IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST_eRevision_Server__c</fullName>
        <label>TEST eRevision Server</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNSNAME__c</fullName>
        <label>TNSNAME</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tape_Format__c</fullName>
        <label>Tape Format</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Environment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Environment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TickerSymbol__c</fullName>
        <label>Ticker Symbol</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Integrator</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP_Address__c</fullName>
        <label>VIP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Web_2_IP_Address__c</fullName>
        <label>Web 2 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_IP_Address__c</fullName>
        <label>Web 1 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Server_2_Ap_Server__c</fullName>
        <label>Web Server 2 (Ap Server)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Server__c</fullName>
        <label>Web Server 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web__c</fullName>
        <label>Web</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Weekend_SPC_Name__c</fullName>
        <label>Weekend SPC Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekend_SPC_Number__c</fullName>
        <label>Weekend SPC Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X11g_SCAN_IP_Address__c</fullName>
        <label>SCAN IP Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X11g_SCAN_Name__c</fullName>
        <description>11G Deployment information</description>
        <label>SCAN IP Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X11g_upgrade_date__c</fullName>
        <label>11g upgrade date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Account_Manager__c</fullName>
        <label>2nd Account Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Angela Shum</fullName>
                </value>
                <value>
                    <fullName>Betsy Samuel</fullName>
                </value>
                <value>
                    <fullName>Gayla O&apos;Fihelly</fullName>
                </value>
                <value>
                    <fullName>Janice Brown</fullName>
                </value>
                <value>
                    <fullName>Lisa Dunn</fullName>
                </value>
                <value>
                    <fullName>Lori Linthicum</fullName>
                </value>
                <value>
                    <fullName>Mark Crouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_Rpt_IP_Address__c</fullName>
        <label>Rpt 2 IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XGL_Version__c</fullName>
        <label>XGL Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.1</fullName>
                </value>
                <value>
                    <fullName>1.2</fullName>
                </value>
                <value>
                    <fullName>1.3</fullName>
                </value>
                <value>
                    <fullName>1.4</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>1.6</fullName>
                </value>
                <value>
                    <fullName>1.7</fullName>
                </value>
                <value>
                    <fullName>1.8</fullName>
                </value>
                <value>
                    <fullName>2.x</fullName>
                </value>
                <value>
                    <fullName>2.0.2</fullName>
                </value>
                <value>
                    <fullName>2.0.3</fullName>
                </value>
                <value>
                    <fullName>2.0.4</fullName>
                </value>
                <value>
                    <fullName>2.0.5</fullName>
                </value>
                <value>
                    <fullName>2.1</fullName>
                </value>
                <value>
                    <fullName>2.2</fullName>
                </value>
                <value>
                    <fullName>2.3</fullName>
                </value>
                <value>
                    <fullName>2.4</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>eRevision_Server_IP_Address__c</fullName>
        <label>eRevision Server IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eRevision_Server__c</fullName>
        <label>eRevision Server</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Network Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Historical_Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AccountNumber__c</columns>
        <columns>Record_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network Sites</pluralLabel>
    <recordTypes>
        <fullName>Eclipse_Internal_Server</fullName>
        <active>true</active>
        <description>Eclipse Internal Server - Information about our internal servers</description>
        <label>Eclipse Internal Server</label>
    </recordTypes>
    <recordTypes>
        <fullName>OpenTV_Network</fullName>
        <active>true</active>
        <description>Eclipse Network</description>
        <label>Eclipse Network</label>
    </recordTypes>
    <recordTypes>
        <fullName>xGL_Internal_Server</fullName>
        <active>true</active>
        <description>xGL Internal Server</description>
        <label>xGL Internal Server</label>
    </recordTypes>
    <recordTypes>
        <fullName>xGL_Production_Server</fullName>
        <active>true</active>
        <description>xGL Production Server</description>
        <label>xGL Production Server</label>
    </recordTypes>
    <recordTypes>
        <fullName>xG_Linear_Network</fullName>
        <active>true</active>
        <description>xG Linear Network</description>
        <label>xG Linear Network</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>